--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
-        <article class="criminalsContainer"></article>
+        <article class="criminalsContainer">
+        </article>
+        <article class="officersContainer">
+        </article>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
