--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <main class="container">
+    <main class="container"> 
         <header>
             <div class="filters">
                 <div class="filter filters__crime"></div>
@@ -17,10 +17,17 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
-        <article class="criminalsContainer">
-        </article>
-        <article class="officersContainer">
-        </article>
+        <article class="officersContainer"></article>
+        <article class="noteFormContainer"></article>
+
+        <div class="lists">
+            <article class="criminalsContainer"></article>
+
+            <aside class="noteListContainer">
+                <div class="noteListButton"></div>
+                <article class="noteList"></article>
+            </aside>
+        </div>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
