Show Witnesses button is working

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <article class="noteFormContainer"></article>
 
         <div class="lists">
+            <div class="witnessButton"></div>
             <article class="criminalsContainer"></article>
 
             <aside class="noteListContainer">
