facilities list is rending

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <div class="filter filters__officer"></div>
             </div>
             <div class="witnessButton"></div>
+            <div class="facility__button"></div>
         </header>
         <article class="officersContainer"></article>
         <article class="noteFormContainer"></article>
